--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin: 0%;
     width: 100%;
 }
@@ -15,7 +15,7 @@ body{
     position: absolute;
     top: 170px;
     left: 30px;
-    color : white;
+    color : rgba(255, 255, 255, 0.993);
     font-family: "Special Gothic Expanded One", sans-serif;
     font-weight: 400;
   font-style: normal;
@@ -144,4 +144,4 @@ opacity: 0.5;
     #btn-1 :hover {
 background-color: black;
     };
-        
+         */
